--- a/bin/server/config.json
+++ b/bin/server/config.json
@@ -4,6 +4,7 @@
   "apps": [
     {
       "name": "app1",
+      "url": "svn://192.168.1.207/app1",
       "node": [
         {
           "ip": "127.0.0.1",
@@ -23,6 +24,7 @@
     },
     {
       "name": "app2",
+      "url": "svn://192.168.1.207/app2",
       "node": [
         {
           "ip": "10.0.0.101",
@@ -61,6 +63,7 @@
     },
     {
       "name": "app3-online",
+      "url": "svn://192.168.1.207/app3",
       "node": [
         {
           "ip": "10.0.0.101",
