--- a/config.json
+++ b/config.json
@@ -3,13 +3,13 @@
   "apps": [
     {
       "name": "douke",
-      "url": "svn://192.168.1.207/xiaohua",
+      "url": "svn://x.x.x.x/douke",
       "node": [
         {
           "alias": "api-1",
           "addr": "192.168.1.11:8081",
           "type": "svn",
-          "path": "/data/wwwroot/xiaohua/trunk",
+          "path": "/data/wwwroot/douke/trunk",
           "befor_deploy": "",
           "after_deploy": ""
         },
@@ -17,21 +17,21 @@
           "alias": "api-2",
           "addr": "192.168.1.207:8081",
           "type": "svn",
-          "path": "/data/wwwroot/xiaohua/trunk",
-          "befor_deploy": "ls /data/wwwroot",
-          "after_deploy": "ls /data/wwwroot/xiaohua/trunk"
+          "path": "/data/wwwroot/douke/trunk",
+          "befor_deploy": "",
+          "after_deploy": ""
         }
       ]
     },
     {
       "name": "ymrj",
-      "url": "svn://192.168.1.207/taoxiaomei",
+      "url": "svn://x.x.x.x/ymrj",
       "node": [
         {
           "alias": "api-1",
           "addr": "192.168.1.11:8081",
           "type": "svn",
-          "path": "/data/wwwroot/taoxiaomei/trunk/",
+          "path": "/data/wwwroot/ymrj/trunk",
           "befor_deploy": "",
           "after_deploy": ""
         },
@@ -39,7 +39,7 @@
           "alias": "api-2",
           "addr": "192.168.1.207:8081",
           "type": "svn",
-          "path": "/data/wwwroot/taoxiaomei/trunk/",
+          "path": "/data/wwwroot/ymrj/trunk",
           "befor_deploy": "",
           "after_deploy": ""
         }
